sandbox/output
ReorderTest.java:10: error: incompatible types: ArrayList<List> cannot be converted to List<List<Integer>>
        List<List<Integer>> expect = new ArrayList<List>();
                                     ^
1 error
